# yolov5-deepsort-tensorrt

./: .gitignore  CMakeLists.txt  CMakeLists_deepsort-tensorrt_win10.txt  CMakeLists_yolov5-deepsort-tensorrt_win10.txt  LICENSE  README.md  demo.cpp  main.cpp  manager.cpp  manager.hpp  yololayer.h  yolov5.cpp  yolov5_lib.cpp
deepsort/include/: hungarianoper.h  kalmanfilter.h  linear_assignment.h  model.hpp  track.h  tracker.h
deepsort/src/: deepsort.cpp  featuretensor.cpp  kalmanfilter.cpp  tracker.cpp
include/: datatype.h  deepsort.h  deepsortenginegenerator.h  featuretensor.h  manager.hpp  nn_matching.h
src/: deepsortenginegenerator.cpp  hungarianoper.cpp  linear_assignment.cpp  main.cpp  manager.cpp  nn_matching.cpp  track.cpp
yolo/include/: yolov5_lib.h
